--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,42 @@
 body {
-
 margin: 8px;
 display: block;
-
+color: purple;
 }
 
 
 #mainHeading {
-
 text-align: center;
 padding-top: 25px;
 padding-bottom: 25px;
 color: purple;
-
 }
 
 
 #list {
 list-style-type: none;
+font-weight: bold;
 }
 
 
 .funParagraph {
-
 color: blue;
-
 }
 
 
 img {
-
 height: 500px;
 width: 31%;
+border-style: solid;
+border-width: 5px;
+}
 
+
+article {
+padding-bottom: 90px;
+}
+
+
+main {
+background-color: lavenderblush;
 }
