--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@ height: 500px;
 width: 31%;
 border-style: solid;
 border-width: 5px;
+display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
